# backtrader-expt

./: =1.4.1  README.md  pyproject.toml
backtrader_expt/: add_commision.py  add_indicator.py  add_logic.py  add_params.py  add_plot.py  buyNsell.py  data_feed.py  firts_str.py  main.py  optimized.py  set_cache.py
tests/test2/: test.py
